--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,6 @@ web_modules/
 
 # dotenv environment variable files
 .env
-.env.*
 !.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -137,3 +136,10 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Temp audio files
+temp/
+
+yt-dlp
+
+assets/*
